# DistChatServer

./: CMakeLists.txt  README.md
FriendServiceServer/include/server/: ChatService.h
FriendServiceServer/src/server/: CMakeLists.txt  server.cc
GroupServiceServer/include/server/rpcservice/: userservice.h
GroupServiceServer/src/server/: CMakeLists.txt  server.cc
MsgServiceServer/include/server/model/: OfflineMsgModel.h
MsgServiceServer/include/server/protobuf/: DistributedService.pb.h  UserService.proto
MsgServiceServer/include/server/rpcservice/: friendservice.h
MsgServiceServer/src/server/: CMakeLists.txt  ChatService.cc  server.cc
MsgServiceServer/src/server/protobuf/: DistributedService.pb.cc
MsgServiceServer/test/testjson/: testjson  testjson.cpp
ProxyServer/: README.md
ProxyServer/include/: config.h  public.h
ProxyServer/include/server/db/: db.h
ProxyServer/include/server/model/: FriendModel.h  GroupUser.h  User.h  UserModel.h
ProxyServer/include/server/protobuf/: DistributedService.pb.h  FriendService.proto  GroupService.proto  MsgService.proto
ProxyServer/include/server/rpcservice/: groupservice.h  msgservice.h  userservice.h
ProxyServer/src/client/: client.cc
ProxyServer/src/server/: CMakeLists.txt  ChatServer.cc  ChatService.cc  server.cc
ProxyServer/src/server/db/: ChatServer.code-workspace
ProxyServer/src/server/model/: GroupModel.cc  OfflineMsgModel.cc  UserModel.cc
ProxyServer/src/server/protobuf/: DistributedService.pb.cc
ProxyServer/src/server/redis/: redis.cc
ProxyServer/test/: CMakeLists.txt
UserServiceServer/include/server/: ChatServer.h
UserServiceServer/include/server/db/: ConnectionPool.h
UserServiceServer/include/server/model/: GroupModel.h
UserServiceServer/src/client/: CMakeLists.txt  client.cc
UserServiceServer/src/server/: CMakeLists.txt  ChatService.cc  server.cc
UserServiceServer/src/server/db/: ConnectionPool.cc
UserServiceServer/src/server/model/: FriendModel.cc
include/server/: ChatServer.h
include/server/model/: Group.h
include/server/rpcservice/: groupservice.h
include/server/rpcsrvice/: friendservice.h
src/client/: client.cc  main.cc
src/server/: CMakeLists.txt  ChatServer.cc  ChatService.cc  main.cpp  server.cc
src/server/db/: db.cc
